# sample-ghcjs-with-stack

./: LICENSE  README.md  sample-ghcjs-with-stack.cabal  stack.yaml
