name:                sample-ghcjs-with-stack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sky-y/sample-ghcjs-with-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Yuki Fujiwara
maintainer:          sky.y.0079@gmail.com
copyright:           (c) 2016, Yuki Fujiwara
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable sample-ghcjs-with-stack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sample-ghcjs-with-stack
  default-language:    Haskell2010

test-suite sample-ghcjs-with-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sample-ghcjs-with-stack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sky-y/sample-ghcjs-with-stack
